# prompt-eval-arena

./: .gitignore  README.md  pyproject.toml
arena/: __init__.py  cli.py  model.py  run.py  scorers.py  stats.py
examples/: run_ab.py
prompts/: email_rubrics.jsonl  email_v2.txt  eval_set.jsonl  v1_simple.txt  v2_chain_of_thought.txt  v3_role_play.txt
