[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval-arena"
version = "0.1.0"
description = "Rigorous A/B harness for prompt iteration with statistical significance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luca Cosentino" }]
dependencies = [
    "openai>=1.40",
    "click>=8.1",
    "rich>=13.7",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.scripts]
arena = "arena.cli:main"

[tool.setuptools.packages.find]
include = ["arena*"]
